crates/tools/cron/src/tests/unit/snapshots/cron__tests__unit__hour__multiple__specifier__all.snap
---
source: crates/tools/cron/src/tests/unit/hour.rs
expression: result
---
Err(
    Error(
        Error {
            inner: [
                Invalid(
                    ",*",
                    '-',
                ),
                Nom(
                    "1,*",
                    Alt,
                ),
            ],
        },
    ),
)
