crates/tools/cron/src/tests/unit/snapshots/cron__tests__unit__hour__multiple__specifier__range.snap
---
source: crates/tools/cron/src/tests/unit/hour.rs
expression: result
---
Err(
    Error(
        Error {
            inner: [
                Invalid(
                    ",1-23",
                    '-',
                ),
                Nom(
                    "1,1-23",
                    Alt,
                ),
            ],
        },
    ),
)
